src/objects/Questionnaire__c.object
<CustomObject>
    <fields>
        <fullName>AD_Account_Structured_Correctly__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Account Structured Correctly</inlineHelpText>
        <label>Account Structured Correctly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AD_Call_Ext__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Call Ext</inlineHelpText>
        <label>Call Ext</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AD_Callout_Ext__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>4+ Callout Ext’s</inlineHelpText>
        <label>4+ Callout Ext’s</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AD_Campaign_Settings__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Campaign Setting</inlineHelpText>
        <label>Campaign Setting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AD_Conversion_Tracking_Accurate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Conversion Tracking Accurate (Confirmed with Client)</inlineHelpText>
        <label>Conversion Tracking Accurate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AD_Daily_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Daily Budget(s)</inlineHelpText>
        <label>Daily Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AD_Device_Bids__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Device Bids</inlineHelpText>
        <label>Device Bids</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AD_Location_Ext__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Location Ext. (If Applicable)</inlineHelpText>
        <label>Location Ext</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AD_Location_Targeting__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Location Targeting</inlineHelpText>
        <label>Location Targeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AD_Message_Ext__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Message Ext. (If Applicable)</inlineHelpText>
        <label>Message Ext</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AD_Price_Ext__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Price Ext. (If Applicable)</inlineHelpText>
        <label>Price Ext</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AD_Scheduling__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Scheduling</inlineHelpText>
        <label>Scheduling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AD_Sitelink_Ext__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>4+ Sitelink Ext’s</inlineHelpText>
        <label>4+ Sitelink Ext’s</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AD_Structured_Snippet__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>1+ Structured Snippet</inlineHelpText>
        <label>1+ Structured Snippet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Acc_will_be_built_optimised_within_48hrs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Acc will be built/optimised within 48hrs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account Product</description>
        <inlineHelpText>Account Product</inlineHelpText>
        <label>Account Product</label>
        <referenceTo>Account_Product__c</referenceTo>
        <relationshipLabel>Questionnaire</relationshipLabel>
        <relationshipName>Questionnaire</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Questionnaire</relationshipLabel>
        <relationshipName>Questionnaire</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Additional_information_do_s_do_not_s__c</fullName>
        <label>Additional information (do&apos;s/do not&apos;s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advertising_budget__c</fullName>
        <description>Advertising budget(s)</description>
        <inlineHelpText>Advertising budget(s)</inlineHelpText>
        <label>Advertising budget(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Advised_Clients_of_Client_Panel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advised Clients of Client Panel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Are_you_the_owner_If_so_why_did_you_st__c</fullName>
        <inlineHelpText>understand why they are passionate about their business and was it because they loved what they do or because there was a need in the market for what they do</inlineHelpText>
        <label>Why did you start your business?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ask_if_they_have_any_questions_or_concer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ask if they have any question or concern</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Goals__c</fullName>
        <description>Business Goals</description>
        <inlineHelpText>Business Goals</inlineHelpText>
        <label>Business Goals</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Confirm_best_email_for_enquiries__c</fullName>
        <label>Confirm best email for enquiries</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Confirm_best_phone_number_to_use_for_enq__c</fullName>
        <label>Confirm best phone no to use for enquire</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_will_begin__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Contact will begin weekly then move to fortnightly when you start to use more advanced techniques</inlineHelpText>
        <label>Contact will begin wkly then to fntly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conversion_Code__c</fullName>
        <label>Conversion Code / Gtag / Global Site Tag</label>
        <length>92768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Converto_Page_Required__c</fullName>
        <label>ConvertoPage Required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_you_get_these_mostly_online_or_over_t__c</fullName>
        <label>How do you receive these, online/phone?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_have_much_experience_or_knowledge__c</fullName>
        <label>Do you have much exp in mng an adws acc?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Do_you_prefer_email_call_for_contact__c</fullName>
        <inlineHelpText>good to know if you are trying to get in contact with the client, are you best to email them or call them</inlineHelpText>
        <label>Do you prefer email/call for contact?</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ensured_client_has_downloaded_LINX_app__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ensured client has downloaded LINX app</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expectations_of_me__c</fullName>
        <description>What are your Expectation of me, as your Account Manager?</description>
        <inlineHelpText>What are your Expectation of me, as your Account Manager?</inlineHelpText>
        <label>Expectations of me</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FB_AB_Ad_Testing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A/B Ad Testing</inlineHelpText>
        <label>AB Ad Testing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FB_Account_Is_Running__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Account Is Running</inlineHelpText>
        <label>Account Is Running</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FB_Admin_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Admin Access</inlineHelpText>
        <label>Admin Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FB_Campaign_not_run__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Campaign has not been running more than 4 weeks</inlineHelpText>
        <label>Campaign not run in 4 weeks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FB_ID_in_SF__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>ID in SF</inlineHelpText>
        <label>ID in SF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FB_Most_Recent_Changes__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Most Recent Changes</inlineHelpText>
        <label>Recent Changes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GTM_Code__c</fullName>
        <label>GTM Code</label>
        <length>92768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gained_Account_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Gained Account Access</inlineHelpText>
        <label>Gained Account Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Google_Analytics__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Google Analytics (If Applicable)</inlineHelpText>
        <label>Google Analytics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Google_Tag_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Google Tag Manager (If Applicable)</inlineHelpText>
        <label>Google Tag Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Have_you_had_someone_manage_your_acc_bef__c</fullName>
        <label>Have you had sb manage your acc before?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_you_tried_to_run_Adwords_Acc_before__c</fullName>
        <inlineHelpText>If yes how did it go, how long for &amp; why did they stop</inlineHelpText>
        <label>Have you tried to run Adws acc before?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_do_you_track_this__c</fullName>
        <inlineHelpText>this is really important. Do they have analytics (get access) , do they have phone tracking (get them to email you fortnightly reports), Do they just note it in a notepad (get them to email you this information).</inlineHelpText>
        <label>How do you track these?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_long_has_your_business_been_running__c</fullName>
        <inlineHelpText>understand if they are known in their market and have strong brand awareness or not</inlineHelpText>
        <label>How long has your business been running?</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_many_leads_sales_per_week_do_you_cur__c</fullName>
        <description>How many leads/sales do you currently receive per week? How much is each lead worth on average?</description>
        <inlineHelpText>How many leads/sales do you currently receive per week? How much is each lead worth on average?</inlineHelpText>
        <label>How many do you receive per week?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hows_yr_adwords_account_working_for_you__c</fullName>
        <label>Hows yr adwords account working for you?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Intro_Text__c</fullName>
        <defaultValue>&quot;Hi (customer name) this is Greg From GMT/SLX. How are you doing? I&apos;m following up on the inital conversation you had with our Onboarding team and wanted to introduce myself as your new Adwords Account Manager.&quot;</defaultValue>
        <description>Intro Text</description>
        <inlineHelpText>Intro Text</inlineHelpText>
        <label>Intro Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Intro__c</fullName>
        <description>Intro</description>
        <inlineHelpText>Intro</inlineHelpText>
        <label>Intro</label>
        <picklist>
            <picklistValues>
                <fullName>Hi (customer name) this is Greg From GMT/SLX. How are you doing? I&apos;m following up on the initial conversation you had with our Onboarding team and wanted to introduce myself as your new Adwords Account Manager.</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Do you have come time to talk about your account setup</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Names_of_additional_landing_page__c</fullName>
        <inlineHelpText>What are the names of the additional landing pages and what should be included in those? (max 4 more)</inlineHelpText>
        <label>Names and inclusions for Add’l clones</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notified_of_ConvertoPages__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notified of ConvertoPages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>On_Average_how_much_does_each_lead_sale__c</fullName>
        <label>How much lead/sale do you make on avg?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Page2_What_is_the_main_industry__c</fullName>
        <label>Page2: What is the main industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page3_What_is_the_main_industry__c</fullName>
        <label>Page3: What is the main industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page4_What_is_the_main_industry__c</fullName>
        <label>Page4: What is the main industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact__c</fullName>
        <description>Preferred Contact(s)</description>
        <inlineHelpText>Preferred Contact(s)</inlineHelpText>
        <label>Preferred Contact(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Experience__c</fullName>
        <description>Previous Experience</description>
        <inlineHelpText>Previous Experience</inlineHelpText>
        <label>Previous Experience</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Current Product Owner</description>
        <inlineHelpText>Current Product Owner</inlineHelpText>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Questionnaire</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_changes_to_management__c</fullName>
        <description>Requested changes to management/account moving forward</description>
        <inlineHelpText>Requested changes to management/account moving forward</inlineHelpText>
        <label>Requested changes to management</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SLX_Billing_is_Separate_from_G_billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SLX Billing is Separate from GG billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Should_we_show_a_map_location__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Should we show a map/location?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Project Ready</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tell_me_abt_your_business_and_what_you__c</fullName>
        <label>Where do you want to take your business?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>The_best_way_to_reach_you__c</fullName>
        <defaultValue>false</defaultValue>
        <label>What’s the best way to reach you?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>We_offer_other_services__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>SEO, WEBSITE, FACEBOOK, GOOGLE PLUS etc</inlineHelpText>
        <label>We offer other services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>What3_is_the_Focus_of_the_LP_content__c</fullName>
        <label>What is the Focus of the LP content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What4_is_the_Focus_of_the_LP_content__c</fullName>
        <label>What is the Focus of the LP content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_advertising_currently_works_the_bes__c</fullName>
        <inlineHelpText>how do they currently make their money</inlineHelpText>
        <label>What works or did work the best?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_are_you_happy_with__c</fullName>
        <label>What are you happy with?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_are_your_expectations_of_me__c</fullName>
        <label>What are your expectations of me?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_are_your_selling_points__c</fullName>
        <description>What sets you apart from your competition? What are you key selling points?</description>
        <inlineHelpText>What sets you apart from your competition? What are you key selling points?</inlineHelpText>
        <label>What are your selling points</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_aren_t_you_happy_with__c</fullName>
        <label>What aren&apos;t you happy with?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_is_the_Focus_of_the_landing_Page_co__c</fullName>
        <inlineHelpText>EG: Blocked drains and Emergency Plumbing only</inlineHelpText>
        <label>What is the Focus of the LP content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_is_the_correct_location_s__c</fullName>
        <label>What is the correct location/s</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_the_existing_website_URL__c</fullName>
        <label>What is the existing website URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>What_is_the_main_industry__c</fullName>
        <inlineHelpText>EG: Plumber</inlineHelpText>
        <label>What is the main industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_your_main_competitor__c</fullName>
        <label>What are your main competitors URL&apos;s?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_your_reason_using_SLX_GMT__c</fullName>
        <description>Why did you decide to sign up for Management with GMT/SLX? What specifically are you looking for us to achieve for you?</description>
        <inlineHelpText>Why did you decide to sign up for Management with GMT/SLX? What specifically are you looking for us to achieve for you?</inlineHelpText>
        <label>What is your reason using SLX/ GMT</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_is_your_target_location__c</fullName>
        <label>What is your target location?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_is_your_target_market_Men_women__c</fullName>
        <inlineHelpText>Can you tell me about your business?</inlineHelpText>
        <label>Can you tell me about your business?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_kind_of_creative_do_you_love_to_see__c</fullName>
        <label>What kind of creative do you love to see</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_other_advertising_on_offline_do__c</fullName>
        <description>What forms of marketing/advertising have you used up until now? How have they worked for you?</description>
        <inlineHelpText>What forms of marketing/advertising have you used up until now? How have they worked for you?</inlineHelpText>
        <label>What other advertisings have you done?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_products_do_you_sell_the_most_of__c</fullName>
        <label>What products do you sell the most of?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_products_do_you_want_to_sell_more__c</fullName>
        <inlineHelpText>you need to understand if they have even thought about this, a lot of small companies don’t and then find themselves in a situation where they need to stop all advertising and outgoing costs as they haven’t worked out what their budget actually is.</inlineHelpText>
        <label>What products do you want to sell more?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_the_min_No_lead_sale_you_need_pwk__c</fullName>
        <description>How many additional leads are you looking to get from your AdWords Account?</description>
        <inlineHelpText>How many additional leads are you looking to get from your AdWords Account?</inlineHelpText>
        <label>What is additional your weekly goal?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Whats_yr_daily_bgt__c</fullName>
        <inlineHelpText>Calculate the total spend per week and add our management fee so they are aware of the total costs</inlineHelpText>
        <label>What is daily budget? How many days?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2_wks_paid_notice_period_of__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2 wks paid notice of CAN in writing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>name_of_the_1_landing_page__c</fullName>
        <inlineHelpText>What is the name of first landing page and what should be included on it?</inlineHelpText>
        <label>Name and inclusions for first page</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>what2_is_the_Focus_of_the_LP_content__c</fullName>
        <label>What is the Focus of the LP content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>what_enquires_do_you_get_the_most_of__c</fullName>
        <label>What enquires do you get the most of?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>what_prods_servs_u_wanna_get_more_enqs__c</fullName>
        <inlineHelpText>what products/services do you want to get more enquiries for?</inlineHelpText>
        <label>what prods/servs u wanna get more enqs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Questionnaire</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>For_testing</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Product__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Owner__c</field>
            <operation>equals</operation>
            <value>Ben Bradshaw</value>
        </filters>
        <label>For Testing</label>
    </listViews>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>Questionnaire Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaire</pluralLabel>
    <recordTypes>
        <fullName>Adwords_Reassignment</fullName>
        <active>true</active>
        <description>Adwords record type for adwords products</description>
        <label>Adwords Reassign Questionnaire</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Questionnaire</fullName>
        <active>true</active>
        <description>New Questionnaire</description>
        <label>New Questionnaire</label>
    </recordTypes>
    <recordTypes>
        <fullName>Social_Reassignment</fullName>
        <active>true</active>
        <description>Record type for facebook - social products</description>
        <label>Social Reassign Questionnaire</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training_Questionnaire</fullName>
        <active>true</active>
        <description>Training Questionnaire</description>
        <label>Training Questionnaire</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>